--- a/JworkzNeosFixFrickenSync/JworkzNeosFixFrickenSync.csproj
+++ b/JworkzNeosFixFrickenSync/JworkzNeosFixFrickenSync.csproj
@@ -10,9 +10,9 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NeosPath>$(MSBuildThisFileDirectory)NeosVR</NeosPath>
+    <NeosPath Condition="Exists('C:\Neos\app\')">C:\Neos\app\</NeosPath>
     <NeosPath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\NeosVR\')">C:\Program Files (x86)\Steam\steamapps\common\NeosVR\</NeosPath>
     <NeosPath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/NeosVR/')">$(HOME)/.steam/steam/steamapps/common/NeosVR/</NeosPath>
-    <NeosPath Condition="Exists('C:\Neos\app\')">C:\Neos\app\</NeosPath>
     <CopyLocal>false</CopyLocal>
     <CopyToMods Condition="'$(CopyToMods)'==''">true</CopyToMods>
     <DebugSymbols Condition="'$(Configuration)'=='Release'">false</DebugSymbols>
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Reference Include="FrooxEngine">
-      <HintPath>C:\Neos\app\Neos_Data\Managed\FrooxEngine.dll</HintPath>
+      <HintPath>$(NeosPath)Neos_Data\Managed\FrooxEngine.dll</HintPath>
     </Reference>
     <Reference Include="HarmonyLib">
       <HintPath>$(NeosPath)nml_libs\0Harmony.dll</HintPath>
